allow-httpsonly/positive-test-case.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - echo1.ex.com
    - echo2.ex.com
    secretName: letsencrypt-staging-secret
  rules:
  - host: echo1.ex.com
    http:
      paths:
      - backend:
        serviceName: echo1
        servicePort: 80
  - host: echo2.ex.com
    http:
      paths:
      - backend:
        serviceName: echo2
        servicePort: 80
